package com.fabiana.mapa_viagem.enums;

public enum TipoCompromisso {
	SUS, 
	PARTICULAR, 
	CONVENIO;
}
