package com.fabiana.mapa_viagem.enums;

public enum TipoEstabelecimento {
	
	HOSPITAL, 
	CLINICA, 
	UPA,
	UBS,
	CENTRO_REABILITACAO,
	LABORATORIO;

}
