package com.fabiana.mapa_viagem.enums;

public enum TipoUnidadeDespesa {
	
	LTDA,
	SERVICO,
	NAO_APLICAVEL;

}
